--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 -->
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded artoolkit='sourceType: webcam;debugUIEnabled: false;markersAreaEnabled: true''>
+  <a-scene embedded artoolkit='sourceType: webcam;debugUIEnabled: false;markersAreaEnabled: true'>
     <!--
       glTF 2.0 Model - busterDrone.gltf
       Using the default hiro marker (Get it below)
