--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-<script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.1/aframe/build/aframe-ar.js"></script>
 <!--
     aframe-extras loaders is needed in order to add glTF models (And a whole lot of other model formats) into your AR Project.
     
@@ -19,7 +19,7 @@
       Using the default hiro marker (Get it below)
       https://github.com/akashkuttappa/armodels/raw/master/markers/hiro.jpg
     -->
-    <a-marker preset='hiro'>
+    <a-marker preset='markers/hiro.jpg'>
       <a-entity
       id="drone"
       position="0 0 0"
